--- a/WebApplication1/Views/Order/Create.cshtml
+++ b/WebApplication1/Views/Order/Create.cshtml
@@ -1,7 +1,36 @@
-﻿
+﻿@model DataModels.Models.Order
 @{
     ViewData["Title"] = "Create";
 }
 
 <h2>Create</h2>
 
+<h4>Order</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="OrderDescription" class="control-label"></label>
+                <input asp-for="OrderDescription" class="form-control" />
+                <span asp-validation-for="OrderDescription" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="orderType" class="control-label"></label>
+                @Html.DropDownList("AccountType",
+             Html.GetEnumSelectList<DataModels.Models.OrderType>(),
+             "Select Account Type", new { @class = "form-control" })
+                <span asp-validation-for="orderType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div>
+                    <p>Upload one or more files using this form:</p>
+                    <input type="file" name="files" multiple />
+                </div>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" />
+            </div>
+        </form>
+    </div>
+</div>
