--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="User" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Order" asp-action="Create">Create Order</a></li>
+                    <li><a asp-area="" asp-controller="Event" asp-action="Index">Lookup Order Events</a></li>
                 </ul>
             </div>
         </div>
