--- a/WebApplication1/Views/Event/Index.cshtml
+++ b/WebApplication1/Views/Event/Index.cshtml
@@ -1,13 +1,29 @@
-﻿@{
+﻿@model DataModels.Models.User
+@{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
 <div>
-    @foreach (DataModels.Models.Event evnt in ViewBag.Events)
-    {
-        <div>@evnt.eventType</div>
-        <div>@evnt.OrderId</div>
-    }
+    <div>
+        <form asp-action="Search">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Username" class="control-label"></label>
+                <input asp-for="Username" class="form-control" />
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Search" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+    <div>
+        @foreach (DataModels.Models.Event evnt in ViewBag.Events)
+        {
+            <div>@evnt.eventType</div>
+            <div>@evnt.OrderId</div>
+        }
+    </div>
 </div>
 
