Cleaned code up.

--- a/OrleansClient/Views/Event/Search.cshtml
+++ b/OrleansClient/Views/Event/Search.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12 col-sm-12 col-lg-12">
         @foreach (OrleansClient.ViewModels.OrderSearchViewModel mod in ViewBag.Orders)
         {
             <div>
