--- a/OrleansClient/Views/Event/Index.cshtml
+++ b/OrleansClient/Views/Event/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Index</h2>
 <div>
     <div>
-        <form asp-action="Search">
+        <form asp-action="Search" method="get">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
