Fixed some of the views.

--- a/OrleansClient/Views/Event/Search.cshtml
+++ b/OrleansClient/Views/Event/Search.cshtml
@@ -5,6 +5,7 @@
 
 <h2>Search</h2>
 
+<h4>User @ViewBag.Orders[0].order.Username</h4>
 
 <div class="row">
     <div class="col-md-12 col-sm-12 col-lg-12">
@@ -39,6 +40,7 @@
                     }
                 </div>
             </div>
+            <hr />
         }
     </div>
 </div>
