--- a/OrleansClient/Views/Event/Index.cshtml
+++ b/OrleansClient/Views/Event/Index.cshtml
@@ -4,8 +4,8 @@
 }
 
 <h2>Index</h2>
-<div>
-    <div>
+<div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12">
         <form asp-action="Search" method="get">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -17,13 +17,6 @@
                 <input type="submit" value="Search" class="btn btn-default" />
             </div>
         </form>
-    </div>
-    <div>
-        @foreach (DataModels.Models.Event evnt in ViewBag.Events)
-        {
-            <div>@evnt.eventType</div>
-            <div>@evnt.OrderId</div>
-        }
     </div>
 </div>
 
