--- a/OrleansClient/Views/Shared/_Layout.cshtml
+++ b/OrleansClient/Views/Shared/_Layout.cshtml
@@ -35,8 +35,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="User" asp-action="Index">Users</a></li>
                     <li><a asp-area="" asp-controller="Order" asp-action="Create">Create Order</a></li>
-                    <li><a asp-area="" asp-controller="Event" asp-action="Index">Lookup Order Events</a></li>
-                    <li><a asp-area="" asp-controller="Event" asp-action="Search">Lookup Orders</a></li>
+                    <li><a asp-area="" asp-controller="Event" asp-action="Index">Search Order Events</a></li>
                 </ul>
             </div>
         </div>
