--- a/OrleansClient/Views/Order/Create.cshtml
+++ b/OrleansClient/Views/Order/Create.cshtml
@@ -6,6 +6,8 @@
 <h2>Create</h2>
 
 <h4>Order</h4>
+
+<h5>Pipeline runs a fire and forget process</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
